--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
       </p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js" integrity="sha256-6pAo0P5NdVs4KJIp4jOSAmhpN6wX+ZspGDZCBoBPuiY=" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api@1.7.16/dist/face-api.min.js"
+      integrity="sha256-LGGBcNlDrluv9vXBxvzasFawLFj2GpKsKtt9+tTo1PI="
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
