--- a/index.html
+++ b/index.html
@@ -77,7 +77,25 @@
       </p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js" integrity="sha256-6pAo0P5NdVs4KJIp4jOSAmhpN6wX+ZspGDZCBoBPuiY=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script type="module">
+      async function bootstrap() {
+        try {
+          const faceApiModule = await import(
+            'https://cdn.jsdelivr.net/npm/@vladmandic/face-api@1.7.16/dist/face-api.esm.js'
+          );
+          const faceapi = faceApiModule.faceapi || faceApiModule.default || faceApiModule;
+          window.faceapi = faceapi;
+          await import('./script.js');
+        } catch (error) {
+          console.error('Unable to load the face-api.js library.', error);
+          const loadingStatus = document.getElementById('loading');
+          if (loadingStatus) {
+            loadingStatus.textContent = 'Unable to load the face analysis library.';
+          }
+        }
+      }
+
+      bootstrap();
+    </script>
   </body>
 </html>
