Mirror face-api.js assets locally

--- a/index.html
+++ b/index.html
@@ -54,12 +54,7 @@
       <p>Need help? Check your browser settings for camera permissions.</p>
     </footer>
 
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"
-      integrity="sha384-IJOcQmoqjDY5g7jzjxcW0kOvXPt+LjGB0vN1wM1fj9oDkPmU9NS5IL+xipsbr3zK"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="./vendor/face-api.min.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
