--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <p>Need help? Check your browser settings for camera permissions.</p>
     </footer>
 
-    <script defer src="./vendor/face-api.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
