Bundle face-api.js locally

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <footer>
       <p>Need help? Check your browser settings for camera permissions.</p>
     </footer>
-
+    <script src="vendor/face-api/face-api.min.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
