Ignore optional face-api binaries

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <section class="app">
         <div class="video-wrapper">
           <video id="video" autoplay playsinline muted></video>
+          <div id="emojiBubble" class="emoji" aria-live="polite" aria-hidden="true"></div>
           <div id="status" class="status">Requesting camera access…</div>
         </div>
         <div class="controls">
@@ -49,7 +50,6 @@
     <footer>
       <p>Need help? Check your browser settings for camera permissions.</p>
     </footer>
-
     <script type="module" src="script.js"></script>
   </body>
 </html>
